# doc-rag-demo

./: .gitignore  Cargo.toml  README.md
d-bert/: Cargo.toml
d-bert/src/: example_RAG_orca.rs  main.rs
gemma/: Cargo.toml
gemma/src/: main.rs
jina-bert/: Cargo.toml
jina-bert/src/: main.rs
llama/: Cargo.toml
llama/src/: main.rs
mistral/: Cargo.toml
mistral/src/: main.rs  mistral_no_quantized_main.rs
python/: CodeQwen1.5.py  CodeQwen1.5_CPU_Quant.py
quantized/: Cargo.toml
quantized/src/: main.rs
rag/: Cargo.toml  gpu_pipeline_1.txt
rag/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs
