[package]
name = "rag"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
qdrant-client = { workspace = true }
tokio = { workspace = true}
env_logger = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
dotenv = "0.15.0"
reqwest = {version = "0.12.3",features = ["json"]}
#candle
candle-transformers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-kernels = { workspace = true, optional = true }

#hf
hf-hub = { workspace = true }
tokenizers = { workspace = true }

#tracing
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }

lib = { workspace = true }
cudarc = { workspace = true, optional = true }


[features]
default = []
cuda = ["cudarc", "dep:candle-kernels"]
cudnn = ["cuda", "cudarc/cudnn"]
