[package]
name = "tests"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
qdrant-client = { workspace = true }
tokio = { workspace = true}
